add arabic verbs and french futur tense

--- a/index.html
+++ b/index.html
@@ -716,7 +716,64 @@
   {"tense1": "Bâtiment", "tense2": "بِنَايَة / بِنَايَات / بِنَايَتَانِ / بِنَايَاتٍ / بِنَايَتَيْنِ", "type": "word"},
   {"tense1": "Tâche", "tense2": "بُقْعَة / بُقَع / بُقْعَتَانِ / بُقَعًا / بُقْعَتَيْنِ", "type": "word"},
   {"tense1": "Traverser", "tense2": "عَبَرَ/يَعْبُرُ/عُبُور/اُعْبُرْ/يُعْبَرُ/عُبِرَ", "type": "verb"},
-  {"tense1": "Se cacher", "tense2": "اِنْغَبَى/يَنْغَبِي/اِنْغِبَاء/اِنْغَبِ/يُنْغَبَى/اُنْغُبِيَ", "type": "verb"}
+  {"tense1": "Se cacher", "tense2": "اِنْغَبَى/يَنْغَبِي/اِنْغِبَاء/اِنْغَبِ/يُنْغَبَى/اُنْغُبِيَ", "type": "verb"},
+  {"tense1": "Paresseux", "tense2": "كَسُول / كُسَلَاء / كَسُولَان / كُسَلَاء / كَسُولَيْن", "type": "word"},
+  {"tense1": "Motivé", "tense2": "مُحَفَّز / مُحَفَّزُون / مُحَفَّزَان / مُحَفَّزِين / مُحَفَّزَيْن", "type": "word"},
+  {"tense1": "Investir", "tense2": "اسْتَثْمَرَ / يَسْتَثْمِرُ / اسْتِثْمَار / اسْتَثْمِرْ / يُسْتَثْمَرُ / اُسْتُثْمِرَ", "type": "verb"},
+  {"tense1": "Nettoyer", "tense2": "نَظَّفَ / يُنَظِّفُ / تَنْظِيف / نَظِّفْ / يُنَظَّفُ / نُظِّفَ", "type": "verb"},
+  {"tense1": "Lien", "tense2": "رَابِط / رَوَابِط / رَابِطَان / رَوَابِط / رَابِطَيْن", "type": "word"},
+  {"tense1": "Indiquer", "tense2": "أَشَارَ / يُشِيرُ / إِشَارَة / أَشِرْ / يُشَارُ / أُشِيرَ", "type": "verb"},
+  {"tense1": "Croix", "tense2": "صَلِيب / صُلْبَان / صَلِيبَان / صُلْبَانًا / صَلِيبَيْن", "type": "word"},
+  {"tense1": "Symbole", "tense2": "رَمْز / رُمُوز / رَمْزَان / رُمُوزًا / رَمْزَيْن", "type": "word"},
+  {"tense1": "Effort", "tense2": "جُهْد / جُهُود / جُهْدَان / جُهُودًا / جُهْدَيْن", "type": "word"},
+  {"tense1": "Trouver", "tense2": "عَثَرَ / يَعْثُرُ / عُثُور / اعْثُرْ / يُعْثَرُ / عُثِرَ", "type": "verb"},
+  {"tense1": "Trouver", "tense2": "وَجَدَ / يَجِدُ / وُجُود / جِدْ / يُوجَدُ / وُجِدَ", "type": "verb"},
+  {"tense1": "Expliquer", "tense2": "شَرَحَ / يَشْرَحُ / شَرْح / اشْرَحْ / يُشْرَحُ / شُرِحَ", "type": "verb"},
+  {"tense1": "Essayer/tester", "tense2": "جَرَّبَ / يُجَرِّبُ / تَجْرِيب / جَرِّبْ / يُجَرَّبُ / جُرِّبَ", "type": "verb"},
+  {"tense1": "Essayer/tenter", "tense2": "حَاوَلَ / يُحَاوِلُ / مُحَاوَلَة / حَاوِلْ / يُحَاوَلُ / حُووِلَ", "type": "verb"},
+  {"tense1": "Isolé", "tense2": "مَعْزُول / مَعْزُولُون / مَعْزُولَان / مَعْزُولِين / مَعْزُولَيْن", "type": "word"},
+  {"tense1": "Conduire", "tense2": "قَادَ / يَقُودُ / قِيَادَة / قُدْ / يُقَادُ / قِيدَ", "type": "verb"},
+  {"tense1": "Challenge", "tense2": "تَحَدٍّ / تَحَدِّيَات / تَحَدِّيَان / تَحَدِّيَاتٍ / تَحَدِّيَيْن", "type": "word"},
+  {"tense1": "S'entrainer", "tense2": "تَدَرَّبَ / يَتَدَرَّبُ / تَدَرُّب / تَدَرَّبْ / يُتَدَرَّبُ / تُدُرِّبَ", "type": "verb"},
+  {"tense1": "Armoire", "tense2": "خِزَانَة / خَزَائِن / خِزَانَتَان / خَزَائِنَ / خِزَانَتَيْن", "type": "word"},
+  {"tense1": "Travaux", "tense2": "أَعْمَال / أَعْمَال / عَمَلَان / أَعْمَالًا / عَمَلَيْن", "type": "word"},
+  {"tense1": "Version", "tense2": "نُسْخَة / نُسَخ / نُسْخَتَان / نُسَخًا / نُسْخَتَيْن", "type": "word"},
+  {"tense1": "Verre (matériau)", "tense2": "زُجَاج / زُجَاجَات / زُجَاجَان / زُجَاجَاتٍ / زُجَاجَيْن", "type": "word"},
+  {"tense1": "Terrasse", "tense2": "شُرْفَة / شُرَف / شُرْفَتَان / شُرَفًا / شُرْفَتَيْن", "type": "word"},
+  {"tense1": "Transparent", "tense2": "شَفَّاف / شَفَّافُون / شَفَّافَان / شَفَّافِين / شَفَّافَيْن", "type": "word"},
+  {"tense1": "Drapeau", "tense2": "عَلَم / أَعْلَام / عَلَمَان / أَعْلَامًا / عَلَمَيْن", "type": "word"},
+  {"tense1": "Soie", "tense2": "حَرِير / حَرَائِر / حَرِيرَان / حَرَائِرَ / حَرِيرَيْن", "type": "word"},
+  {"tense1": "Conscience", "tense2": "وَعْي / أَوْعِيَة / وَعْيَان / أَوْعِيَةً / وَعْيَيْن", "type": "word"},
+  {"tense1": "Contrat", "tense2": "عَقْد / عُقُود / عَقْدَان / عُقُودًا / عَقْدَيْن", "type": "word"},
+  {"tense1": "Lécher", "tense2": "لَعِقَ / يَلْعَقُ / لَعْق / الْعَقْ / يُلْعَقُ / لُعِقَ", "type": "verb"},
+  {"tense1": "Promettre", "tense2": "وَعَدَ / يَعِدُ / وَعْد / عِدْ / يُوعَدُ / وُعِدَ", "type": "verb"},
+  {"tense1": "Toucher", "tense2": "لَمَسَ / يَلْمِسُ / لَمْس / الْمِسْ / يُلْمَسُ / لُمِسَ", "type": "verb"},
+  {"tense1": "Pousser", "tense2": "دَفَعَ / يَدْفَعُ / دَفْع / ادْفَعْ / يُدْفَعُ / دُفِعَ", "type": "verb"},
+  {"tense1": "Défendre", "tense2": "دَافَعَ / يُدَافِعُ / دِفَاع / دَافِعْ / يُدَافَعُ / دُوفِعَ", "type": "verb"},
+  {"tense1": "Refléter", "tense2": "عَكَسَ / يَعْكِسُ / عَكْس / اعْكِسْ / يُعْكَسُ / عُكِسَ", "type": "verb"},
+  {"tense1": "Pentu", "tense2": "مُنْحَدِر / مُنْحَدِرُون / مُنْحَدِرَان / مُنْحَدِرِين / مُنْحَدِرَيْن", "type": "word"},
+  {"tense1": "Ombre", "tense2": "ظِلّ / ظِلَال / ظِلَّان / ظِلَالًا / ظِلَّيْن", "type": "word"},
+  {"tense1": "Parier", "tense2": "رَاهَنَ / يُرَاهِنُ / مُرَاهَنَة / رَاهِنْ / يُرَاهَنُ / رُوهِنَ", "type": "verb"},
+  {"tense1": "Souvenir", "tense2": "ذِكْرَى / ذِكْرَيَات / ذِكْرَيَان / ذِكْرَيَاتٍ / ذِكْرَيَيْن", "type": "word"},
+  {"tense1": "Passer (le ballon)", "tense2": "يُمَرِّرُ الكُرَةَ", "type": "sentence"},
+  {"tense1": "Lunette", "tense2": "نَظَّارَة / نَظَّارَات / نَظَّارَتَان / نَظَّارَاتٍ / نَظَّارَتَيْن", "type": "word"},
+  {"tense1": "Piège", "tense2": "مَقْلَب / مَقَالِب / مَقْلَبَان / مَقَالِبَ / مَقْلَبَيْن", "type": "word"},
+  {"tense1": "Acquérir", "tense2": "اكْتَسَبَ / يَكْتَسِبُ / اكْتِسَاب / اكْتَسِبْ / يُكْتَسَبُ / اُكْتُسِبَ", "type": "verb"},
+  {"tense1": "Venin", "tense2": "سُمّ / سُمُوم / سُمَّان / سُمُومًا / سُمَّيْن", "type": "word"},
+  {"tense1": "Paralysé", "tense2": "مَشْلُول / مَشْلُولُون / مَشْلُولَان / مَشْلُولِين / مَشْلُولَيْن", "type": "word"},
+  {"tense1": "Sans faire exprès", "tense2": "بِدُونِ قَصْدٍ", "type": "sentence"},
+  {"tense1": "Arme", "tense2": "سِلَاح / أَسْلِحَة / سِلَاحَان / أَسْلِحَةً / سِلَاحَيْن", "type": "word"},
+  {"tense1": "Fraise", "tense2": "فَرَاوْلَة / فَرَاوْلَات / فَرَاوْلَتَان / فَرَاوْلَاتٍ / فَرَاوْلَتَيْن", "type": "word"},
+  {"tense1": "Framboise", "tense2": "تُوت العُلَّيْق / تُوت العُلَّيْق / تُوتَا العُلَّيْق / تُوت العُلَّيْقٍ / تُوتَيْ العُلَّيْق", "type": "word"},
+  {"tense1": "Mûre (fruit)", "tense2": "تُوت أَسْوَد / تُوت أَسْوَد / تُوتَا أَسْوَد / تُوت أَسْوَدٍ / تُوتَيْ أَسْوَد", "type": "word"},
+  {"tense1": "Mixeur", "tense2": "خَلَّاط / خَلَّاطَات / خَلَّاطَان / خَلَّاطَاتٍ / خَلَّاطَيْن", "type": "word"},
+  {"tense1": "Licencié", "tense2": "مَفْصُول / مَفْصُولُون / مَفْصُولَان / مَفْصُولِين / مَفْصُولَيْن", "type": "word"},
+  {"tense1": "Murir", "tense2": "نَضَجَ / يَنْضُجُ / نُضْج / اُنْضُجْ / يُنْضَجُ / نُضِجَ", "type": "verb"},
+  {"tense1": "Inverse", "tense2": "عَكْس / عُكُوس / عَكْسَان / عُكُوسًا / عَكْسَيْن", "type": "word"},
+  {"tense1": "Éthique", "tense2": "أَخْلَاق / أَخْلَاق / خُلُقَان / أَخْلَاقًا / خُلُقَيْن", "type": "word"},
+  {"tense1": "Barrière", "tense2": "حَاجِز / حَوَاجِز / حَاجِزَان / حَوَاجِزَ / حَاجِزَيْن", "type": "word"},
+  {"tense1": "S'adapter", "tense2": "تَكَيَّفَ / يَتَكَيَّفُ / تَكَيُّف / تَكَيَّفْ / يُتَكَيَّفُ / تُكُيِّفَ", "type": "verb"},
+  {"tense1": "Insister", "tense2": "أَصَرَّ / يُصِرُّ / إِصْرَار / أَصِرَّ / يُصَرُّ / أُصِرَّ", "type": "verb"}
 ]
 
         // French
@@ -726,7 +783,7 @@
 { "name": "présent", "hint": "1er groupe: je parle, tu parles, il/elle/on parle, nous parlons, vous parlez, ils/elles parlent\n\n2ème groupe: je finis, tu finis, il/elle/on finit, nous finissons, vous finissez, ils/elles finissent\n\n3ème groupe: je vends, tu vends, il/elle/on vend, nous vendons, vous vendez, ils/elles vendent" },
 //{ "name": "imparfait", "hint": "1er groupe: je parlais, tu parlais, il/elle/on parlait, nous parlions, vous parliez, ils/elles parlaient\n\n2ème groupe: je finissais, tu finissais, il/elle/on finissait, nous finissions, vous finissiez, ils/elles finissaient\n\n3ème groupe: je vendais, tu vendais, il/elle/on vendait, nous vendions, vous vendiez, ils/elles vendaient" },
 // { "name": "passé simple", "hint": "1er groupe: je parlai, tu parlas, il/elle/on parla, nous parlâmes, vous parlâtes, ils/elles parlèrent\n\n2ème groupe: je finis, tu finis, il/elle/on finit, nous finîmes, vous finîtes, ils/elles finirent\n\n3ème groupe: je vendis, tu vendis, il/elle/on vendit, nous vendîmes, vous vendîtes, ils/elles vendirent" },
-// { "name": "futur simple", "hint": "1er groupe: je parlerai, tu parleras, il/elle/on parlera, nous parlerons, vous parlerez, ils/elles parleront\n\n2ème groupe: je finirai, tu finiras, il/elle/on finira, nous finirons, vous finirez, ils/elles finiront\n\n3ème groupe: je vendrai, tu vendras, il/elle/on vendra, nous vendrons, vous vendrez, ils/elles vendront" },
+{ "name": "futur simple", "hint": "1er groupe: je parlerai, tu parleras, il/elle/on parlera, nous parlerons, vous parlerez, ils/elles parleront\n\n2ème groupe: je finirai, tu finiras, il/elle/on finira, nous finirons, vous finirez, ils/elles finiront\n\n3ème groupe: je vendrai, tu vendras, il/elle/on vendra, nous vendrons, vous vendrez, ils/elles vendront" },
 { "name": "passé composé", "hint": "1er groupe: j'ai parlé, tu as parlé, il/elle/on a parlé, nous avons parlé, vous avez parlé, ils/elles ont parlé\n\n2ème groupe: j'ai fini, tu as fini, il/elle/on a fini, nous avons fini, vous avez fini, ils/elles ont fini\n\n3ème groupe: j'ai vendu, tu as vendu, il/elle/on a vendu, nous avons vendu, vous avez vendu, ils/elles ont vendu" },
 // { "name": "plus-que-parfait", "hint": "1er groupe: j'avais parlé, tu avais parlé, il/elle/on avait parlé, nous avions parlé, vous aviez parlé, ils/elles avaient parlé\n\n2ème groupe: j'avais fini, tu avais fini, il/elle/on avait fini, nous avions fini, vous aviez fini, ils/elles avaient fini\n\n3ème groupe: j'avais vendu, tu avais vendu, il/elle/on avait vendu, nous avions vendu, vous aviez vendu, ils/elles avaient vendu" },
 // { "name": "conditionnel présent", "hint": "1er groupe: je parlerais, tu parlerais, il/elle/on parlerait, nous parlerions, vous parleriez, ils/elles parleraient\n\n2ème groupe: je finirais, tu finirais, il/elle/on finirait, nous finirions, vous finiriez, ils/elles finiraient\n\n3ème groupe: je vendrais, tu vendrais, il/elle/on vendrait, nous vendrions, vous vendriez, ils/elles vendraient" },
