--- a/index.html
+++ b/index.html
@@ -1945,6 +1945,7 @@ const words_french = [
             document.getElementById("resetBtn").style.display = "none";
             document.getElementById("nextBtn").style.display = "none";
             document.getElementById("conjBtn").style.display = "none";
+            document.getElementById("hintBtn").style.display = "none";
             const completions = parseInt(getLocalStorage(`verbs_${get_language()}`)) || 0;
 
             setLocalStorage(`verbs_${get_language()}`, completions + 1);
