--- a/index.html
+++ b/index.html
@@ -1933,7 +1933,9 @@ const words_french = [
         }
 
         function NextVerb() {
-            if (!verbShowed) score++;
+            // if (!verbShowed) 
+            
+            score++;
 
             document.getElementById("score").textContent = score;
             showRandomVerb();
