--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
                         <div id="randomWords" class="mt-3"></div>
                         <p id="expressionTimer" class="mt-3">Time left: 5:00</p>
                         <button class="btn btn-primary mt-3" onclick="refreshExpression()">Refresh Expression</button>
+                        <button class="btn btn-primary mt-3" onclick="nextExpressionWord()">Next Word</button>
                         <button class="btn btn-primary mt-3" id="pause" onclick="pause()">Pause</button>
                     </div>
                 </div>
@@ -1999,14 +2000,21 @@ const words_french = [
         }
 
         // expression tab
+        var expressionScore = 0;
         document.getElementById("total_expression").innerText = parseInt(getLocalStorage(`expression_${get_language()}`)) + "/" + getGoal(`expression_${get_language()}`)|| 0 + "/" + getGoal(`expression_${get_language()}`);
         let expressionTimerInterval;
         let running = false;
 
         function refreshExpression() {
+            expressionScore = 0;
             refreshImage();
-            displayRandomWords();
+            displayRandomWord();
             startExpressionTimer();
+        }
+
+        function nextExpressionWord() {
+            expressionScore++;
+            displayRandomWord();
         }
 
         function pause() {
@@ -2014,14 +2022,14 @@ const words_french = [
             document.getElementById("pause").innerText = running ? "pause" : "play";
         }
 
-        function displayRandomWords() {
+        function displayRandomWord() {
             const words = get_words();
-            const randomWords = [];
-            for (let i = 0; i < 3; i++) {
-                const randomIndex = Math.floor(Math.random() * words.length);
-                randomWords.push(words[randomIndex].tense1 + "/" + words[randomIndex].tense2);
-            }
-            document.getElementById('randomWords').innerHTML = randomWords.join(' - ');
+            const randomIndex = Math.floor(Math.random() * words.length);
+            const randomObject = words[randomIndex];
+            const randomWords = randomObject.tense2.split("/")
+            const randomWord = randomWords[Math.floor(Math.random() * randomWords.length)];
+                        
+            document.getElementById('randomWords').innerText = "Score: " + expressionScore + " - " + randomWord + " (" + randomObject.tense1 + ")";
         }
 
         function startExpressionTimer() {
