new arabic words

--- a/index.html
+++ b/index.html
@@ -809,7 +809,81 @@
   {"tense1": "Éthique", "tense2": "أَخْلَاق / أَخْلَاق / خُلُقَان / أَخْلَاقًا / خُلُقَيْن", "type": "word"},
   {"tense1": "Barrière", "tense2": "حَاجِز / حَوَاجِز / حَاجِزَان / حَوَاجِزَ / حَاجِزَيْن", "type": "word"},
   {"tense1": "S'adapter", "tense2": "تَكَيَّفَ / يَتَكَيَّفُ / تَكَيُّف / تَكَيَّفْ / يُتَكَيَّفُ / تُكُيِّفَ", "type": "verb"},
-  {"tense1": "Insister", "tense2": "أَصَرَّ / يُصِرُّ / إِصْرَار / أَصِرَّ / يُصَرُّ / أُصِرَّ", "type": "verb"}
+  {"tense1": "Insister", "tense2": "أَصَرَّ / يُصِرُّ / إِصْرَار / أَصِرَّ / يُصَرُّ / أُصِرَّ", "type": "verb"},
+  {"tense1": "S'enthousiasmer", "tense2": "تَحَمَّسَ/يَتَحَمَّسُ/تَحَمُّس/تَحَمَّسْ/يُتَحَمَّسُ/تُحُمِّسَ", "type": "verb"},
+  {"tense1": "Se retirer", "tense2": "اِنْسَحَبَ/يَنْسَحِبُ/اِنْسِحَاب/اِنْسَحِبْ/يُنْسَحَبُ/اُنْسُحِبَ", "type": "verb"},
+  {"tense1": "Banquet", "tense2": "وَلِيمَة / وَلَائِم / وَلِيمَتَانِ / وَلَائِمَ / وَلِيمَتَيْنِ", "type": "word"},
+  {"tense1": "Falloir", "tense2": "يَنْبَغِي/يَنْبَغِي/اِنْبِغَاء/اِنْبَغِ/يُنْبَغَى/اُنْبُغِيَ", "type": "verb"},
+  {"tense1": "Prendre en charge", "tense2": "تَوَلَّى/يَتَوَلَّى/تَوَلٍّ/تَوَلَّ/يُتَوَلَّى/تُوُلِّيَ", "type": "verb"},
+  {"tense1": "Malicieux", "tense2": "شَقِيّ / أَشْقِيَاء / شَقِيَّانِ / أَشْقِيَاءَ / شَقِيَّيْنِ", "type": "word"},
+  {"tense1": "Tracteur", "tense2": "جَرَّار / جَرَّارَات / جَرَّارَانِ / جَرَّارَاتٍ / جَرَّارَيْنِ", "type": "word"},
+  {"tense1": "Voisin", "tense2": "جَار / جِيرَان / جَارَانِ / جِيرَانًا / جَارَيْنِ", "type": "word"},
+  {"tense1": "Épisode", "tense2": "حَلْقَة / حَلَقَات / حَلْقَتَانِ / حَلَقَاتٍ / حَلْقَتَيْنِ", "type": "word"},
+  {"tense1": "Se plaindre", "tense2": "شَكَا/يَشْكُو/شَكْوَى/اشْكُ/يُشْكَى/شُكِيَ", "type": "verb"},
+  {"tense1": "Critiquer", "tense2": "اِنْتَقَدَ/يَنْتَقِدُ/اِنْتِقَاد/اِنْتَقِدْ/يُنْتَقَدُ/اُنْتُقِدَ", "type": "verb"},
+  {"tense1": "Sauver", "tense2": "أَنْقَذَ/يُنْقِذُ/إِنْقَاذ/أَنْقِذْ/يُنْقَذُ/أُنْقِذَ", "type": "verb"},
+  {"tense1": "Fair", "tense2": "عَادِل / عُدُول / عَادِلَانِ / عُدُولًا / عَادِلَيْنِ", "type": "word"},
+  {"tense1": "Légé", "tense2": "خَفِيف / خِفَاف / خَفِيفَانِ / خِفَافًا / خَفِيفَيْنِ", "type": "word"},
+  {"tense1": "Flotter", "tense2": "طَفَا/يَطْفُو/طَفْو/اطْفُ/يُطْفَى/طُفِيَ", "type": "verb"},
+  {"tense1": "Ligne", "tense2": "خَطّ / خُطُوط / خَطَّانِ / خُطُوطًا / خَطَّيْنِ", "type": "word"},
+  {"tense1": "Voler", "tense2": "طَارَ/يَطِيرُ/طَيَرَان/طِرْ/يُطَارُ/طِيرَ", "type": "verb"},
+  {"tense1": "Jeune", "tense2": "شَابّ / شَبَاب / شَابَّانِ / شَبَابًا / شَابَّيْنِ", "type": "word"},
+  {"tense1": "Légende", "tense2": "أُسْطُورَة / أَسَاطِير / أُسْطُورَتَانِ / أَسَاطِيرَ / أُسْطُورَتَيْنِ", "type": "word"},
+  {"tense1": "Seconde", "tense2": "ثَانِيَة / ثَوَانٍ / ثَانِيَتَانِ / ثَوَانِيَ / ثَانِيَتَيْنِ", "type": "word"},
+  {"tense1": "Fenêtre", "tense2": "نَافِذَة / نَوَافِذ / نَافِذَتَانِ / نَوَافِذَ / نَافِذَتَيْنِ", "type": "word"},
+  {"tense1": "Garantir", "tense2": "ضَمِنَ/يَضْمَنُ/ضَمَان/اضْمَنْ/يُضْمَنُ/ضُمِنَ", "type": "verb"},
+  {"tense1": "Ramper", "tense2": "زَحَفَ/يَزْحَفُ/زَحْف/ازْحَفْ/يُزْحَفُ/زُحِفَ", "type": "verb"},
+  {"tense1": "Tenir/respecter", "tense2": "أَوْفَى/يُوفِي/إِيفَاء/أَوْفِ/يُوفَى/أُوفِيَ", "type": "verb"},
+  {"tense1": "Violer", "tense2": "خَرَقَ/يَخْرِقُ/خَرْق/اخْرِقْ/يُخْرَقُ/خُرِقَ", "type": "verb"},
+  {"tense1": "Actuar", "tense2": "مَثَّلَ/يُمَثِّلُ/تَمْثِيل/مَثِّلْ/يُمَثَّلُ/مُثِّلَ", "type": "verb"},
+  {"tense1": "Laisser/permettre", "tense2": "دَعَا/يَدْعُو/دَعْوَة/ادْعُ/يُدْعَى/دُعِيَ", "type": "verb"},
+  {"tense1": "Diriger", "tense2": "أَدَارَ/يُدِيرُ/إِدَارَة/أَدِرْ/يُدَارُ/أُدِيرَ", "type": "verb"},
+  {"tense1": "Tourner", "tense2": "دَارَ/يَدُورُ/دَوَرَان/دُرْ/يُدَارُ/دِيرَ", "type": "verb"},
+  {"tense1": "Croire", "tense2": "آمَنَ/يُؤْمِنُ/إِيمَان/آمِنْ/يُؤْمَنُ/أُومِنَ", "type": "verb"},
+  {"tense1": "Espérer", "tense2": "تَمَنَّى/يَتَمَنَّى/تَمَنٍّ/تَمَنَّ/يُتَمَنَّى/تُمُنِّيَ", "type": "verb"},
+  {"tense1": "Accord", "tense2": "صَفْقَة / صَفَقَات / صَفْقَتَانِ / صَفَقَاتٍ / صَفْقَتَيْنِ", "type": "word"},
+  {"tense1": "Pacte", "tense2": "عَهْد / عُهُود / عَهْدَانِ / عُهُودًا / عَهْدَيْنِ", "type": "word"},
+  {"tense1": "Contrat", "tense2": "عَقْد / عُقُود / عَقْدَانِ / عُقُودًا / عَقْدَيْنِ", "type": "word"},
+  {"tense1": "Échapper à", "tense2": "فَادَى/يُفَادِي/مُفَادَاة/فَادِ/يُفَادَى/فُودِيَ", "type": "verb"},
+  {"tense1": "Dune", "tense2": "كَثِيب / كُثْبَان / كَثِيبَانِ / كُثْبَانًا / كَثِيبَيْنِ", "type": "word"},
+  {"tense1": "Environnement", "tense2": "بِيئَة / بِيئَات / بِيئَتَانِ / بِيئَاتٍ / بِيئَتَيْنِ", "type": "word"},
+  {"tense1": "Tiroir", "tense2": "دُرْج / أَدْرَاج / دُرْجَانِ / أَدْرَاجًا / دُرْجَيْنِ", "type": "word"},
+  {"tense1": "Canne à pêche", "tense2": "عَصَا الصَّيْد / عِصِيّ الصَّيْد / عَصَاتَا الصَّيْد / عِصِيَّ الصَّيْد / عَصَاتَيِ الصَّيْد", "type": "word"},
+  {"tense1": "Mâcher", "tense2": "مَضَغَ/يَمْضَغُ/مَضْغ/امْضَغْ/يُمْضَغُ/مُضِغَ", "type": "verb"},
+  {"tense1": "Fixer du regard", "tense2": "حَدَّقَ/يُحَدِّقُ/تَحْدِيق/حَدِّقْ/يُحَدَّقُ/حُدِّقَ", "type": "verb"},
+  {"tense1": "Recevoir", "tense2": "حَظِيَ/يَحْظَى/حَظْوَة/احْظَ/يُحْظَى/حُظِيَ", "type": "verb"},
+  {"tense1": "Exagéré", "tense2": "تَمَادَى/يَتَمَادَى/تَمَادٍ/تَمَادَ/يُتَمَادَى/تُمُودِيَ", "type": "verb"},
+  {"tense1": "Clown", "tense2": "مُهَرِّج / مُهَرِّجُون / مُهَرِّجَانِ / مُهَرِّجِينَ / مُهَرِّجَيْنِ", "type": "word"},
+  {"tense1": "Blague", "tense2": "نُكْتَة / نُكَت / نُكْتَتَانِ / نُكَتًا / نُكْتَتَيْنِ", "type": "word"},
+  {"tense1": "Point", "tense2": "نُقْطَة / نِقَاط / نُقْطَتَانِ / نِقَاطًا / نُقْطَتَيْنِ", "type": "word"},
+  {"tense1": "Réaction", "tense2": "رَدَّة فِعْل / رَدَّات فِعْل / رَدَّتَا فِعْل / رَدَّاتِ فِعْل / رَدَّتَيْ فِعْل", "type": "word"},
+  {"tense1": "Plaine", "tense2": "سَهْل / سُهُول / سَهْلَانِ / سُهُولًا / سَهْلَيْنِ", "type": "word"},
+  {"tense1": "Se noyer", "tense2": "غَرِقَ/يَغْرَقُ/غَرَق/اغْرَقْ/يُغْرَقُ/غُرِقَ", "type": "verb"},
+  {"tense1": "Tomber", "tense2": "وَقَعَ/يَقَعُ/وُقُوع/قَعْ/يُوقَعُ/وُقِعَ", "type": "verb"},
+  {"tense1": "Valide", "tense2": "صَالِح / صَالِحُون / صَالِحَانِ / صَالِحِينَ / صَالِحَيْنِ", "type": "word"},
+  {"tense1": "Direction", "tense2": "اتِّجَاه / اتِّجَاهَات / اتِّجَاهَانِ / اتِّجَاهَاتٍ / اتِّجَاهَيْنِ", "type": "word"},
+  {"tense1": "Qualité", "tense2": "جَوْدَة / جَودَات / جَوْدَتَانِ / جَودَاتٍ / جَوْدَتَيْنِ", "type": "word"},
+  {"tense1": "Pollution", "tense2": "تَلَوُّث / تَلَوُّثَات / تَلَوُّثَانِ / تَلَوُّثَاتٍ / تَلَوُّثَيْنِ", "type": "word"},
+  {"tense1": "Crime", "tense2": "جَرِيمَة / جَرَائِم / جَرِيمَتَانِ / جَرَائِمَ / جَرِيمَتَيْنِ", "type": "word"},
+  {"tense1": "Collectionner", "tense2": "جَمَعَ/يَجْمَعُ/جَمْع/اجْمَعْ/يُجْمَعُ/جُمِعَ", "type": "verb"},
+  {"tense1": "Regretter", "tense2": "نَدِمَ/يَنْدَمُ/نَدَم/انْدَمْ/يُنْدَمُ/نُدِمَ", "type": "verb"},
+  {"tense1": "Devolver", "tense2": "سَلَّمَ/يُسَلِّمُ/تَسْلِيم/سَلِّمْ/يُسَلَّمُ/سُلِّمَ", "type": "verb"},
+  {"tense1": "Déféquer", "tense2": "تَبَرَّزَ/يَتَبَرَّزُ/تَبَرُّز/تَبَرَّزْ/يُتَبَرَّزُ/تُبُرِّزَ", "type": "verb"},
+  {"tense1": "Polluer", "tense2": "لَوَّثَ/يُلَوِّثُ/تَلْوِيث/لَوِّثْ/يُلَوَّثُ/لُوِّثَ", "type": "verb"},
+  {"tense1": "Collègue", "tense2": "زَمِيل / زُمَلَاء / زَمِيلَانِ / زُمَلَاءَ / زَمِيلَيْنِ", "type": "word"},
+  {"tense1": "Client", "tense2": "عَمِيل / عُمَلَاء / عَمِيلَانِ / عُمَلَاءَ / عَمِيلَيْنِ", "type": "word"},
+  {"tense1": "IA", "tense2": "ذَكَاء صِنَاعِي / ذَكَاءَات صِنَاعِيَّة / ذَكَاءَانِ صِنَاعِيَّانِ / ذَكَاءَاتٍ صِنَاعِيَّةً / ذَكَاءَيْنِ صِنَاعِيَّيْنِ", "type": "word"},  
+  {"tense1": "Résister", "tense2": "قَاوَمَ/يُقَاوِمُ/مُقَاوَمَة/قَاوِمْ/يُقَاوَمُ/قُووِمَ", "type": "verb"},
+  {"tense1": "Virage", "tense2": "مُنْعَطَف / مُنْعَطَفَات / مُنْعَطَفَانِ / مُنْعَطَفَاتٍ / مُنْعَطَفَيْنِ", "type": "word"},
+  {"tense1": "Pompier", "tense2": "رَجُل إِطْفَاء / رِجَال إِطْفَاء / رَجُلَا إِطْفَاء / رِجَالَ إِطْفَاء / رَجُلَيْ إِطْفَاء", "type": "word"},
+  {"tense1": "Éteindre", "tense2": "أَطْفَأَ/يُطْفِئُ/إِطْفَاء/أَطْفِئْ/يُطْفَأُ/أُطْفِئَ", "type": "verb"},
+  {"tense1": "Similaire", "tense2": "مُشَابِه / مُشَابِهُون / مُشَابِهَانِ / مُشَابِهِينَ / مُشَابِهَيْنِ", "type": "word"},
+  {"tense1": "Ressembler", "tense2": "شَابَهَ/يُشَابِهُ/مُشَابَهَة/شَابِهْ/يُشَابَهُ/شُوبِهَ", "type": "verb"},
+  {"tense1": "Stratégie", "tense2": "إِسْتِرَاتِيجِيَّة / إِسْتِرَاتِيجِيَّات / إِسْتِرَاتِيجِيَّتَانِ / إِسْتِرَاتِيجِيَّاتٍ / إِسْتِرَاتِيجِيَّتَيْنِ", "type": "word"},
+  {"tense1": "Maintenir", "tense2": "حَافَظَ/يُحَافِظُ/مُحَافَظَة/حَافِظْ/يُحَافَظُ/حُوفِظَ", "type": "verb"},
+  {"tense1": "Robe", "tense2": "فُسْتَان / فَسَاتِين / فُسْتَانَانِ / فَسَاتِينَ / فُسْتَانَيْنِ", "type": "word"},
+  {"tense1": "Disponible", "tense2": "مُتَاح / مُتَاحُون / مُتَاحَانِ / مُتَاحِينَ / مُتَاحَيْنِ", "type": "word"},
+  {"tense1": "Rencontrer", "tense2": "قَابَلَ/يُقَابِلُ/مُقَابَلَة/قَابِلْ/يُقَابَلُ/قُوبِلَ", "type": "verb"}
 ]
 
         // French
