--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
   {"tense1": "Mâcher", "tense2": "مَضَغَ/يَمْضَغُ/مَضْغ/امْضَغْ/يُمْضَغُ/مُضِغَ", "type": "verb"},
   {"tense1": "Fixer du regard", "tense2": "حَدَّقَ/يُحَدِّقُ/تَحْدِيق/حَدِّقْ/يُحَدَّقُ/حُدِّقَ", "type": "verb"},
   {"tense1": "Recevoir", "tense2": "حَظِيَ/يَحْظَى/حَظْوَة/احْظَ/يُحْظَى/حُظِيَ", "type": "verb"},
-  {"tense1": "Exagéré", "tense2": "تَمَادَى/يَتَمَادَى/تَمَادٍ/تَمَادَ/يُتَمَادَى/تُمُودِيَ", "type": "verb"},
+  {"tense1": "Exagérer", "tense2": "تَمَادَى/يَتَمَادَى/تَمَادٍ/تَمَادَ/يُتَمَادَى/تُمُودِيَ", "type": "verb"},
   {"tense1": "Clown", "tense2": "مُهَرِّج / مُهَرِّجُون / مُهَرِّجَانِ / مُهَرِّجِينَ / مُهَرِّجَيْنِ", "type": "word"},
   {"tense1": "Blague", "tense2": "نُكْتَة / نُكَت / نُكْتَتَانِ / نُكَتًا / نُكْتَتَيْنِ", "type": "word"},
   {"tense1": "Point", "tense2": "نُقْطَة / نِقَاط / نُقْطَتَانِ / نِقَاطًا / نُقْطَتَيْنِ", "type": "word"},
@@ -891,7 +891,7 @@
 
         const  tenses_french = [
 { "name": "présent", "hint": "1er groupe: je parle, tu parles, il/elle/on parle, nous parlons, vous parlez, ils/elles parlent\n\n2ème groupe: je finis, tu finis, il/elle/on finit, nous finissons, vous finissez, ils/elles finissent\n\n3ème groupe: je vends, tu vends, il/elle/on vend, nous vendons, vous vendez, ils/elles vendent" },
-//{ "name": "imparfait", "hint": "1er groupe: je parlais, tu parlais, il/elle/on parlait, nous parlions, vous parliez, ils/elles parlaient\n\n2ème groupe: je finissais, tu finissais, il/elle/on finissait, nous finissions, vous finissiez, ils/elles finissaient\n\n3ème groupe: je vendais, tu vendais, il/elle/on vendait, nous vendions, vous vendiez, ils/elles vendaient" },
+{ "name": "imparfait", "hint": "1er groupe: je parlais, tu parlais, il/elle/on parlait, nous parlions, vous parliez, ils/elles parlaient\n\n2ème groupe: je finissais, tu finissais, il/elle/on finissait, nous finissions, vous finissiez, ils/elles finissaient\n\n3ème groupe: je vendais, tu vendais, il/elle/on vendait, nous vendions, vous vendiez, ils/elles vendaient" },
 // { "name": "passé simple", "hint": "1er groupe: je parlai, tu parlas, il/elle/on parla, nous parlâmes, vous parlâtes, ils/elles parlèrent\n\n2ème groupe: je finis, tu finis, il/elle/on finit, nous finîmes, vous finîtes, ils/elles finirent\n\n3ème groupe: je vendis, tu vendis, il/elle/on vendit, nous vendîmes, vous vendîtes, ils/elles vendirent" },
 { "name": "futur simple", "hint": "1er groupe: je parlerai, tu parleras, il/elle/on parlera, nous parlerons, vous parlerez, ils/elles parleront\n\n2ème groupe: je finirai, tu finiras, il/elle/on finira, nous finirons, vous finirez, ils/elles finiront\n\n3ème groupe: je vendrai, tu vendras, il/elle/on vendra, nous vendrons, vous vendrez, ils/elles vendront" },
 { "name": "passé composé", "hint": "1er groupe: j'ai parlé, tu as parlé, il/elle/on a parlé, nous avons parlé, vous avez parlé, ils/elles ont parlé\n\n2ème groupe: j'ai fini, tu as fini, il/elle/on a fini, nous avons fini, vous avez fini, ils/elles ont fini\n\n3ème groupe: j'ai vendu, tu as vendu, il/elle/on a vendu, nous avons vendu, vous avez vendu, ils/elles ont vendu" },
@@ -899,7 +899,7 @@
 // { "name": "conditionnel présent", "hint": "1er groupe: je parlerais, tu parlerais, il/elle/on parlerait, nous parlerions, vous parleriez, ils/elles parleraient\n\n2ème groupe: je finirais, tu finirais, il/elle/on finirait, nous finirions, vous finiriez, ils/elles finiraient\n\n3ème groupe: je vendrais, tu vendrais, il/elle/on vendrait, nous vendrions, vous vendriez, ils/elles vendraient" },
 // { "name": "conditionnel passé", "hint": "1er groupe: j'aurais parlé, tu aurais parlé, il/elle/on aurait parlé, nous aurions parlé, vous auriez parlé, ils/elles auraient parlé\n\n2ème groupe: j'aurais fini, tu aurais fini, il/elle/on aurait fini, nous aurions fini, vous auriez fini, ils/elles auraient fini\n\n3ème groupe: j'aurais vendu, tu aurais vendu, il/elle/on aurait vendu, nous aurions vendu, vous auriez vendu, ils/elles auraient vendu" },
 // { "name": "présent du subjonctif", "hint": "1er groupe: que je parle, que tu parles, qu'il/elle/on parle, que nous parlions, que vous parliez, qu'ils/elles parlent\n\n2ème groupe: que je finisse, que tu finisses, qu'il/elle/on finisse, que nous finissions, que vous finissiez, qu'ils/elles finissent\n\n3ème groupe: que je vende, que tu vendes, qu'il/elle/on vende, que nous vendions, que vous vendiez, qu'ils/elles vendent" },
-{ "name": "impératif", "hint": "1er groupe: (tu) parle, (nous) parlons, (vous) parlez\n\n2ème groupe: (tu) finis, (nous) finissons, (vous) finissez\n\n3ème groupe: (tu) vends, (nous) vendons, (vous) vendez" },
+//{ "name": "impératif", "hint": "1er groupe: (tu) parle, (nous) parlons, (vous) parlez\n\n2ème groupe: (tu) finis, (nous) finissons, (vous) finissez\n\n3ème groupe: (tu) vends, (nous) vendons, (vous) vendez" },
 { "name": "infinitif", "hint": "1er groupe: parler\n\n2ème groupe: finir\n\n3ème groupe: vendre" }
 // { "name": "gérondif", "hint": "1er groupe: en parlant\n\n2ème groupe: en finissant\n\n3ème groupe: en vendant" }
 ];
