new arabic words

--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
   {"tense1": "Avancer", "tense2": "تَقَدَّمَ/يَتَقَدَّمُ/تَقَدُّم/تَقَدَّمْ/يُتَقَدَّمُ/تُقُدِّمَ", "type": "verb"},
   {"tense1": "Vibrer", "tense2": "اِهْتَزَّ/يَهْتَزُّ/اِهْتِزَاز/اِهْتَزَّ/يُهْتَزُّ/اُهْتُزَّ", "type": "verb"},
   {"tense1": "Rouler", "tense2": "تَدَحْرَجَ/يَتَدَحْرَجُ/تَدَحْرُج/تَدَحْرَجْ/يُتَدَحْرَجُ/تُدُحْرِجَ", "type": "verb"},
-  {"tense1": "Créer", "tense2": "أَنْشَأَ/يُنْشِئُ/إِنْشَاء/أَنْشِئْ/يُنْشَأُ/أُنْشِئَ", "type": "verb"},
+  {"tense1": "Créer/Engendrer", "tense2": "أَنْشَأَ/يُنْشِئُ/إِنْشَاء/أَنْشِئْ/يُنْشَأُ/أُنْشِئَ", "type": "verb"},
   {"tense1": "Lever de soleil", "tense2": "شُرُوق الشَّمْس", "type": "sentence"},
   {"tense1": "Réseaux sociaux", "tense2": "الشَّبَكَات الاِجْتِمَاعِيَّة", "type": "sentence"},
   {"tense1": "Chevalier", "tense2": "فَارِس / فُرْسَان / فَارِسَانِ / فُرْسَانًا / فَارِسَيْنِ", "type": "word"},
@@ -883,9 +883,53 @@
   {"tense1": "Maintenir", "tense2": "حَافَظَ/يُحَافِظُ/مُحَافَظَة/حَافِظْ/يُحَافَظُ/حُوفِظَ", "type": "verb"},
   {"tense1": "Robe", "tense2": "فُسْتَان / فَسَاتِين / فُسْتَانَانِ / فَسَاتِينَ / فُسْتَانَيْنِ", "type": "word"},
   {"tense1": "Disponible", "tense2": "مُتَاح / مُتَاحُون / مُتَاحَانِ / مُتَاحِينَ / مُتَاحَيْنِ", "type": "word"},
-  {"tense1": "Rencontrer", "tense2": "قَابَلَ/يُقَابِلُ/مُقَابَلَة/قَابِلْ/يُقَابَلُ/قُوبِلَ", "type": "verb"}
+  {"tense1": "Rencontrer", "tense2": "قَابَلَ/يُقَابِلُ/مُقَابَلَة/قَابِلْ/يُقَابَلُ/قُوبِلَ", "type": "verb"},
+  {"tense1": "Enlever", "tense2": "خَلَعَ / يَخْلَعُ / خَلْع / اِخْلَعْ / يُخْلَعُ / خُلِعَ", "type": "verb"},
+  {"tense1": "Mi-temps", "tense2": "وَقْت مُسْتَقْطَع / أَوْقَات مُسْتَقْطَعَة / وَقْتَان مُسْتَقْطَعَان / أَوْقَاتاً مُسْتَقْطَعَةً / وَقْتَيْنِ مُسْتَقْطَعَيْنِ", "type": "word"},
+  {"tense1": "Tricher", "tense2": "غَشَّ / يَغُشُّ / غِشّ / غُشَّ / يُغَشُّ / غُشَّ", "type": "verb"},
+  {"tense1": "Marquer (un point)", "tense2": "سَجَّلَ / يُسَجِّلُ / تَسْجِيل / سَجِّلْ / يُسَجَّلُ / سُجِّلَ", "type": "verb"},
+  {"tense1": "Enregistrer", "tense2": "سَجَّلَ / يُسَجِّلُ / تَسْجِيل / سَجِّلْ / يُسَجَّلُ / سُجِّلَ", "type": "verb"},
+  {"tense1": "Décevoir", "tense2": "خَذَلَ / يَخْذُلُ / خَذْل / اُخْذُلْ / يُخْذَلُ / خُذِلَ", "type": "verb"},
+  {"tense1": "Distraction", "tense2": "الإِلْهَاء / الإِلْهَاءَات / إِلْهَاءَان / إِلْهَاءَاتٍ / إِلْهَاءَيْنِ", "type": "word"},
+  {"tense1": "Improviser", "tense2": "ارْتَجَلَ / يَرْتَجِلُ / ارْتِجَال / ارْتَجِلْ / يُرْتَجَلُ / اُرْتُجِلَ", "type": "verb"},
+  {"tense1": "Conseiller", "tense2": "نَصَحَ / يَنْصَحُ / نُصْح / اِنْصَحْ / يُنْصَحُ / نُصِحَ", "type": "verb"},
+  {"tense1": "Toilette", "tense2": "مِرْحَاض / مَرَاحِيض / مِرْحَاضَان / مَرَاحِيضَ / مِرْحَاضَيْنِ", "type": "word"},
+  {"tense1": "Cache-cache", "tense2": "غُمَّيْضَة / غُمَّيْضَات / غُمَّيْضَتَان / غُمَّيْضَاتٍ / غُمَّيْضَتَيْنِ", "type": "word"},
+  {"tense1": "Recharger", "tense2": "أَعَادَ شَحْنَ / يُعِيدُ شَحْنَ / إِعَادَة شَحْن / أَعِدْ شَحْنَ / يُعَادُ شَحْنُ / أُعِيدَ شَحْنُ", "type": "verb"},
+  {"tense1": "Féliciter", "tense2": "هَنَّأَ / يُهَنِّئُ / تَهْنِئَة / هَنِّئْ / يُهَنَّأُ / هُنِّئَ", "type": "verb"},
+  {"tense1": "Parfum", "tense2": "عِطْر / عُطُور / عِطْرَان / عُطُوراً / عِطْرَيْنِ", "type": "word"},
+  {"tense1": "Probabilité", "tense2": "احْتِمَال / احْتِمَالَات / احْتِمَالَان / احْتِمَالَاتٍ / احْتِمَالَيْنِ", "type": "word"},
+  {"tense1": "Probable", "tense2": "مُحْتَمَل / مُحْتَمَلَة / مُحْتَمَلَان / مُحْتَمَلِين / مُحْتَمَلَيْنِ", "type": "word"},
+  {"tense1": "Prophétie", "tense2": "نُبُوءَة / نُبُوءَات / نُبُوءَتَان / نُبُوءَاتٍ / نُبُوءَتَيْنِ", "type": "word"},
+  {"tense1": "Performance", "tense2": "أَدَاء / أَدَاءَات / أَدَاءَان / أَدَاءَاتٍ / أَدَاءَيْنِ", "type": "word"},
+  {"tense1": "Outil", "tense2": "أَدَاة / أَدَوَات / أَدَاتَان / أَدَوَاتٍ / أَدَاتَيْنِ", "type": "word"},
+  {"tense1": "Superviser", "tense2": "أَشْرَفَ / يُشْرِفُ / إِشْرَاف / أَشْرِفْ / يُشْرَفُ / أُشْرِفَ", "type": "verb"},
+  {"tense1": "Costume", "tense2": "زِيّ / أَزْيَاء / زِيَّان / أَزْيَاءً / زِيَّيْنِ", "type": "word"},
+  {"tense1": "Paniquer", "tense2": "ذَعَرَ / يَذْعَرُ / ذُعْر / اِذْعَرْ / يُذْعَرُ / ذُعِرَ", "type": "verb"},
+  {"tense1": "Se répandre", "tense2": "انْتَشَرَ / يَنْتَشِرُ / انْتِشَار / اِنْتَشِرْ / يُنْتَشَرُ / اُنْتُشِرَ", "type": "verb"},
+  {"tense1": "Voie/moyen", "tense2": "سَبِيل / سُبُل / سَبِيلَان / سُبُلاً / سَبِيلَيْنِ", "type": "word"},
+  {"tense1": "Prendre des précautions", "tense2": "احْتَاطَ / يَحْتَاطُ / احْتِيَاط / اِحْتَطْ / يُحْتَاطُ / اُحْتِيطَ", "type": "verb"},
+  {"tense1": "Développer", "tense2": "طَوَّرَ / يُطَوِّرُ / تَطْوِير / طَوِّرْ / يُطَوَّرُ / طُوِّرَ", "type": "verb"},
+  {"tense1": "Rassurer", "tense2": "طَمْأَنَ / يُطَمْئِنُ / طَمْأَنَة / طَمْئِنْ / يُطَمْأَنُ / طُمْئِنَ", "type": "verb"},
+  {"tense1": "S'excuser", "tense2": "اعْتَذَرَ / يَعْتَذِرُ / اعْتِذَار / اِعْتَذِرْ / يُعْتَذَرُ / اُعْتُذِرَ", "type": "verb"},
+  {"tense1": "Avertir", "tense2": "أَنْذَرَ / يُنْذِرُ / إِنْذَار / أَنْذِرْ / يُنْذَرُ / أُنْذِرَ", "type": "verb"},
+  {"tense1": "Amende", "tense2": "غَرَامَة / غَرَامَات / غَرَامَتَان / غَرَامَاتٍ / غَرَامَتَيْنِ", "type": "word"},
+  {"tense1": "Mettre", "tense2": "وَضَعَ / يَضَعُ / وَضْع / ضَعْ / يُوضَعُ / وُضِعَ", "type": "verb"},
+  {"tense1": "Secouer", "tense2": "هَزَّ / يَهُزُّ / هَزّ / هُزَّ / يُهَزُّ / هُزَّ", "type": "verb"},
+  {"tense1": "Invité", "tense2": "ضَيْف / ضُيُوف / ضَيْفَان / ضُيُوفاً / ضَيْفَيْنِ", "type": "word"},
+  {"tense1": "Mouiller", "tense2": "بَلَّ / يَبُلُّ / بَلّ / بُلَّ / يُبَلُّ / بُلَّ", "type": "verb"},
+  {"tense1": "Plat (flat)", "tense2": "مُسَطَّح / مُسَطَّحَة / مُسَطَّحَان / مُسَطَّحِين / مُسَطَّحَيْنِ", "type": "word"},
+  {"tense1": "Bougie", "tense2": "شَمْعَة / شُمُوع / شَمْعَتَان / شُمُوعاً / شَمْعَتَيْنِ", "type": "word"},
+  {"tense1": "Étincelle", "tense2": "شُهْبَة / شُهُب / شُهْبَتَان / شُهُباً / شُهْبَتَيْنِ", "type": "word"},
+  {"tense1": "Humiliant", "tense2": "مُهِين / مُهِينَة / مُهِينَان / مُهِينِين / مُهِينَيْنِ", "type": "word"},
+  {"tense1": "Périr", "tense2": "هَلَكَ / يَهْلِكُ / هَلَاك / اِهْلِكْ / يُهْلَكُ / هُلِكَ", "type": "verb"},
+  {"tense1": "Briller", "tense2": "تَوَهَّجَ / يَتَوَهَّجُ / تَوَهُّج / تَوَهَّجْ / يُتَوَهَّجُ / تُوُهِّجَ", "type": "verb"},
+  {"tense1": "Entourer", "tense2": "أَحَاطَ / يُحِيطُ / إِحَاطَة / أَحِطْ / يُحَاطُ / أُحِيطَ", "type": "verb"},
+  {"tense1": "Aplaudir", "tense2": "صَفَّقَ / يُصَفِّقُ / تَصْفِيق / صَفِّقْ / يُصَفَّقُ / صُفِّقَ", "type": "verb"},
+  {"tense1": "Touriste", "tense2": "سَائِح / سُيَّاح / سَائِحَان / سُيَّاحاً / سَائِحَيْنِ", "type": "word"},
+  {"tense1": "Affaire", "tense2": "أَغْرَاض / أَغْرَاض / غَرَضَان / أَغْرَاضاً / غَرَضَيْنِ", "type": "word"},
+  {"tense1": "Surveiller", "tense2": "رَاقَبَ / يُرَاقِبُ / مُرَاقَبَة / رَاقِبْ / يُرَاقَبُ / رُوقِبَ", "type": "verb"}
 ]
-
         // French
         const pronouns_french = ["je", "tu", "il", "elle", "nous", "vous", "ils", "elles"];
 
